# web-app

./: .env  Cargo.toml
src/: main.rs  vars.rs
src/api/: mod.rs
src/api/account/actions/: mod.rs
src/api/account/models/: payloads.rs
src/api/account/routes/: mod.rs  register.rs
src/api/error/handlers/: mod.rs
src/api/models/: user.rs
src/db/: mod.rs
src/db/mirrors/: confirmation.rs  mod.rs  user.rs
src/db/models/: confirmation.rs  mod.rs  user.rs
src/db/models/token/: mod.rs
src/db/models/user/: mod.rs
src/db/queries/: confirmation.rs  mod.rs  user.rs
src/db/query/: mod.rs
src/db/query/token/: mod.rs
src/db/query/user/: mod.rs
src/models/: mod.rs  user.rs
src/models/account/: entities.rs  mod.rs
src/models/user/: mod.rs  token.rs  user.rs
src/pages/: mod.rs
src/pages/account/: mod.rs
src/pages/error/: mod.rs
src/services/: mod.rs
src/services/email/: mod.rs
src/utils/: email.rs  mod.rs  password.rs  validators.rs
static/css/: account.css  error.css  mutante.css  normalize.css  style.css
static/error/: 400.html  404.html  405.html  500.html
static/javascript/: mutante.js
templates/account/: account.html  account_activated.html  activate.html  check_inbox.html  confirmation.html  expired.html  expired_activation.html  login.html  new_account.html  password.html  register.html
templates/account/messages/: activated.html  created.html  reset.html
templates/components/: heads.html  navbar.html
templates/error/: 400.html  404.html  405.html  error.html
templates/layouts/: base_layout.html  main_layout.html
(+19 files in other folders)
