[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
serde = { version = "1", features = ["derive"] }
validator = { version = "0.14.0", features = ["derive"] }
tera = "1"