[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5.0"
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
validator = { version = "0.14.0", features = ["derive"] }
tera = "1"
uuid = { version = "0.8", features = ["serde", "v4"] }
regex = "1"
lazy_static = "1"
maud = { version = "0.23.0", features = ["actix-web"] }
lettre = "0.10.0-rc.4"
rust-crypto = "0.2.36"
chrono = { version = "0.4", features = ["serde"] }